--- a/QuartzIntegrationExampleJob/src/main/resources/quartz.properties
+++ b/QuartzIntegrationExampleJob/src/main/resources/quartz.properties
@@ -35,5 +35,5 @@ org.quartz.jobStore.clusterCheckinInterval = 20000
 org.quartz.dataSource.myDS.driver=com.mysql.cj.jdbc.Driver
 org.quartz.dataSource.myDS.URL=jdbc:mysql://localhost:3306/batch_quartz
 org.quartz.dataSource.myDS.user=root
-org.quartz.dataSource.myDS.password=Murthy@143
+org.quartz.dataSource.myDS.password=password
 org.quartz.dataSource.myDS.maxConnections=30
