--- a/QuartzIntegrationExampleJob/src/main/resources/application.properties
+++ b/QuartzIntegrationExampleJob/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/batch_quartz
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=Murthy@143
 spring.datasource.tomcat.max-active=10
 spring.datasource.tomcat.initialSize=5
 
